# libksane

./: .gitignore  .kde-ci.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  ChangeLog  KF5SaneConfig.cmake.in  KFSaneConfig.cmake.in  KSaneConfig.cmake.in  NEWS  README  README.md  TODO  libksane.lsm.cmake  libksane.pc.cmake  metainfo.yaml
autotests/: CMakeLists.txt
cmake-modules/: FindSane.cmake
cmake/templates/: libksane.lsm.cmake.in
ksanetwain/: CMakeLists.txt  ksaneoption.cpp  ktwain_widget.cpp  twain.h  twainiface.cpp  twainiface.h
libksane/: CMakeLists.txt  KSaneAccessSingleton.cpp  KSaneAccessSingleton.h  KSaneCore.cpp  KSaneCore.h  KSaneDevice.cpp  KSaneDevice.h  KSaneDevicePrivate.cpp  KSaneDevicePrivate.h  KSaneDeviceTest.cpp  KSaneFindDevicesThread.cpp  KSaneFindDevicesThread.h  KSanePreviewThread.cpp  KSanePreviewThread.h  KSaneScanThread.cpp  KSaneScanThread.h  KSaneSelectionItem.cpp  KSaneSelectionItem.h  KSaneViewer.cpp  KSaneViewer.h  KSaneViewer_test.cpp  KSaneWidget.cpp  KSaneWidgetPrivate.cpp  KSaneWidgetPrivate.h  Messages.sh  TODO  dummy-hplip.cpp  gamma_disp.cpp  gamma_disp.h  ksane.h  ksane_auth.cpp  ksane_auth.h  ksane_button.cpp  ksane_button.h  ksane_device_dialog.cpp  ksane_device_dialog.h  ksane_find_devices_thread.cpp  ksane_find_devices_thread.h  ksane_preview_thread.cpp  ksane_preview_thread.h  (+39 more)
libksane/options/: KSaneOptButton.cpp  KSaneOptButton.h  KSaneOptCheckBox.cpp  KSaneOptCheckBox.h  KSaneOptCombo.cpp  KSaneOptCombo.h  KSaneOptEntry.cpp  KSaneOptEntry.h  KSaneOptGamma.cpp  KSaneOptGamma.h  KSaneOptInternal.cpp  KSaneOptInternal.h  KSaneOptSlider.cpp  KSaneOptSlider.h  KSaneOptSliderF.cpp  KSaneOptSliderF.h  KSaneOption.cpp  KSaneOption.h  ksane_opt_button.cpp  ksane_opt_button.h  ksane_opt_checkbox.cpp  ksane_opt_checkbox.h  ksane_opt_combo.cpp  ksane_opt_combo.h  ksane_opt_entry.cpp  ksane_opt_entry.h  ksane_opt_fslider.cpp  ksane_opt_fslider.h  ksane_opt_gamma.cpp  ksane_opt_gamma.h  ksane_opt_slider.cpp  ksane_opt_slider.h  ksane_option.cpp  ksane_option.h
libksane/widgets/: KSaneButton.cpp  KSaneButton.h  KSaneCheckBox.cpp  KSaneCheckBox.h  KSaneCombo.cpp  KSaneCombo.h  KSaneEntry.cpp  KSaneEntry.h  KSaneGamma.cpp  KSaneGamma.h  KSaneGammaDisp.cpp  KSaneGammaDisp.h  KSaneOptionWidget.cpp  KSaneOptionWidget.h  KSaneSlider.cpp  KSaneSlider.h  KSaneSliderF.cpp  KSaneSliderF.h  gamma_disp.cpp  gamma_disp.h  ksane_button.cpp  ksane_button.h  ksane_option_widget.cpp  ksane_option_widget.h  labeled_checkbox.cpp  labeled_checkbox.h  labeled_combo.cpp  labeled_combo.h  labeled_entry.cpp  labeled_entry.h  labeled_fslider.cpp  labeled_fslider.h  labeled_gamma.cpp  labeled_gamma.h  labeled_slider.cpp  labeled_slider.h
po/ar/: libksane.po
po/be/: libksane.po
po/bg/: libksane.po
po/bs/: libksane.po
po/ca/: libksane.po
po/ca@valencia/: libksane.po
po/cs/: libksane.po
po/da/: libksane.po
po/de/: libksane.po
po/el/: libksane.po
po/en_GB/: libksane.po
po/eo/: libksane.po
po/es/: libksane.po
po/et/: libksane.po
po/eu/: libksane.po
po/fi/: libksane.po
po/fr/: libksane.po
po/ga/: libksane.po
po/gl/: libksane.po
po/he/: libksane.po
po/hi/: libksane.po
po/hne/: libksane.po
po/hr/: libksane.po
po/hu/: libksane.po
po/ia/: libksane.po
po/id/: libksane.po
po/ie/: libksane.po
po/is/: libksane.po
po/it/: libksane.po
po/ja/: libksane.po
po/ka/: libksane.po
po/kk/: libksane.po
po/km/: libksane.po
po/ko/: libksane.po
po/lt/: libksane.po
po/lv/: libksane.po
po/ml/: libksane.po
po/mr/: libksane.po
po/nb/: libksane.po
po/nds/: libksane.po
po/nl/: libksane.po
po/nn/: libksane.po
po/oc/: libksane.po
po/pa/: libksane.po
po/pl/: libksane.po
src/: CMakeLists.txt  Mainpage.dox  hiderectitem.cpp  hiderectitem.h  i18n-hplip.cpp  ksane.cpp  ksane.h  ksane_auth.cpp  ksane_device_dialog.cpp  ksane_device_dialog.h  ksane_find_devices_thread.cpp  ksane_find_devices_thread.h  ksane_p.cpp  ksane_p.h  ksane_preview_thread.cpp  ksane_preview_thread.h  ksane_scan_thread.cpp  ksane_scan_thread.h  ksane_viewer.cpp  ksane_viewer.h  ksane_viewer_test.cpp  ksane_widget_private.cpp  ksane_widget_private.h  ksaneauth.cpp  ksaneauth.h  ksanecore.cpp  ksanecore.h  ksanecore_p.cpp  ksanecore_p.h  ksanedevicedialog.cpp  ksanedevicedialog.h  ksanefinddevicesthread.cpp  ksanefinddevicesthread.h  ksaneimagebuilder.cpp  ksaneimagebuilder.h  ksaneinternaloption.cpp  ksaneinternaloption.h  ksaneoption.cpp  ksaneoption.h  ksaneoption_p.h  (+18 more)
src/options/: ksane_opt_button.cpp  ksane_opt_button.h  ksane_opt_checkbox.cpp  ksane_opt_checkbox.h  ksane_opt_combo.cpp  ksane_opt_combo.h  ksane_opt_entry.cpp  ksane_opt_entry.h  ksane_opt_fslider.cpp  ksane_opt_fslider.h  ksane_opt_gamma.cpp  ksane_opt_gamma.h  ksane_opt_slider.cpp  ksane_opt_slider.h  ksane_option.cpp  ksane_option.h  ksaneactionoption.cpp  ksaneactionoption.h  ksanebaseoption.cpp  ksanebaseoption.h  ksanebatchdelayoption.cpp  ksanebatchdelayoption.h  ksanebatchmodeoption.cpp  ksanebatchmodeoption.h  ksanebooloption.cpp  ksanebooloption.h  ksanedoubleoption.cpp  ksanedoubleoption.h  ksanefloatoption.cpp  ksanefloatoption.h  ksanegammaoption.cpp  ksanegammaoption.h  ksaneintegeroption.cpp  ksaneintegeroption.h  ksaneinvertoption.cpp  ksaneinvertoption.h  ksanelistoption.cpp  ksanelistoption.h  ksaneoptbutton.cpp  ksaneoptbutton.h  (+18 more)
src/widgets/: gamma_disp.cpp  gamma_disp.h  gammadisp.cpp  gammadisp.h  ksane_button.cpp  ksane_button.h  ksane_option_widget.cpp  ksane_option_widget.h  ksanebutton.cpp  ksanebutton.h  ksaneoptionwidget.cpp  ksaneoptionwidget.h  labeled_checkbox.cpp  labeled_checkbox.h  labeled_combo.cpp  labeled_combo.h  labeled_entry.cpp  labeled_entry.h  labeled_fslider.cpp  labeled_fslider.h  labeled_gamma.cpp  labeled_gamma.h  labeled_slider.cpp  labeled_slider.h  labeledcheckbox.cpp  labeledcheckbox.h  labeledcombo.cpp  labeledcombo.h  labeledentry.cpp  labeledentry.h  labeledfslider.cpp  labeledfslider.h  labeledgamma.cpp  labeledgamma.h  labeledslider.cpp  labeledslider.h
tests/: CMakeLists.txt  ksaneviewertest.cpp
(+16 files in other folders)
